--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8"/>
     <title>PDF.js 'Hello, base64!' example</title>
     <script src="wasm_exec.js"></script>
-    <script src="//mozilla.github.io/pdf.js/build/pdf.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.6.347/pdf.min.js"></script>
     <script>
         const go = new Go();
 
@@ -28,7 +28,7 @@
         var pdfjsLib = window['pdfjs-dist/build/pdf'];
 
         // The workerSrc property shall be specified.
-        pdfjsLib.GlobalWorkerOptions.workerSrc = '//mozilla.github.io/pdf.js/build/pdf.worker.js';
+        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.6.347/pdf.worker.min.js';
 
         // Reference for main doc
         var pdfDoc;
